--- a/src/pages/Homepage/Homepage.css
+++ b/src/pages/Homepage/Homepage.css
@@ -1,13 +1,14 @@
-.homepage {
-  display: flex;
+.homepage-container {
   min-height: 100vh;
-  background-color: black;
+  background-image: linear-gradient(Black, #1f1b24);
   color: white;
 }
 
 /* Sidebar Styles */
-
 .sidebar {
+  position: fixed;
+  left: 0;
+  top: 56px;
   width: 100px;
   padding: 20px 0;
   display: flex;
@@ -17,13 +18,13 @@
 }
 
 .sidebar a {
-    text-decoration: none;
-    color: inherit;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 8px;
-  }
+  text-decoration: none;
+  color: inherit;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px;
+}
 
 .nav-item {
   display: flex;
@@ -43,15 +44,14 @@
 /* Main Content Styles */
 
 .main-content {
-  flex: 1;
-  padding: 20px;
+  padding-top: 76px;
+  padding-left: 120px;
 }
 
 /* Hero Section */
 .hero {
   position: relative;
   height: 400px;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(81, 3, 78, 0.5));
   background-size: cover;
   background-position: center;
   display: flex;
@@ -63,6 +63,7 @@
 .hero-content h1 {
   font-size: 4rem;
   line-height: 1.2;
+  color: #bb86fc;
 }
 
 .hero-content h1 span {
@@ -74,7 +75,7 @@
   top: 20px;
   right: 20px;
   padding: 10px 30px;
-  background-color: #e94daa;
+  background-color: #9d52f8;
   color: white;
   border: none;
   border-radius: 25px;
@@ -96,7 +97,7 @@
   left: 0;
   width: 100%;
   height: 2px;
-  background: linear-gradient(to right, #e94daa, transparent);
+  background: linear-gradient(to right, #bb86fc, transparent);
 }
 
 .artist-grid {
