--- a/src/components/loginmodal/AuthModal.css
+++ b/src/components/loginmodal/AuthModal.css
@@ -1,70 +1,70 @@
-.auth-container {
-  min-height: 100vh;
-  background-image: linear-gradient(Black, #1f1b24);
+/* AuthModal.css */
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.7);
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top: 56px;
+  z-index: 1000;
 }
 
-.poster {
+.modal-content {
   width: 960px;
   height: 600px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 8px;
-  background-color: rgba(29, 18, 36, 0.5);
-  padding: 8px;
+  background-color: rgba(29, 18, 36);
+  padding: 32px;
   color: white;
   border-radius: 8px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 1), 0 1px 8px rgba(0, 0, 0, 0.2);
   border: 1px solid rgba(255, 255, 255, 0.05);
-  margin-bottom: 100px;
+  position: relative;
 }
 
-/* poster-header section */
-.login-header {
+.close-button {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  border: none;
+  background: none;
+  color: white;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.modal-header {
   text-align: center;
   margin-bottom: 32px;
 }
 
-.login-header h2 {
+.modal-header h2 {
   font-size: 32px;
   margin-bottom: 8px;
 }
 
-.login-header h3 {
+.modal-header h3 {
   font-size: 24px;
   margin-bottom: 15px;
 }
 
-/* form Styles */
-.poster-content {
+.modal-form-container {
   width: 100%;
   max-width: 400px;
   padding: 0 20px;
 }
 
-.login-form {
+.auth-form {
   display: flex;
   flex-direction: column;
   gap: 16px;
   width: 100%;
-}
-
-.change-site p {
-  color: whitesmoke;
-  padding-right: 10px;
-}
-
-.change-site {
-  margin-top: 16px;
-  display: flex;
-  gap: 15px;
-  justify-content: center;
-  align-items: center;
 }
 
 .form-input {
@@ -86,7 +86,19 @@
   cursor: pointer;
 }
 
+.change-auth {
+  margin-top: 16px;
+  display: flex;
+  gap: 8px;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+
 .switch-button {
+  background: none;
+  border: none;
   color: #9d52f8;
-  text-decoration: none;
+  cursor: pointer;
+  padding: 0;
 }
