--- a/src/pages/Homepage/Homepage.css
+++ b/src/pages/Homepage/Homepage.css
@@ -63,7 +63,7 @@
 }
 
 .hero-content h1 {
-  font-size: 4rem;
+  font-size: 64px;
   line-height: 1.2;
   color: #bb86fc;
 }
@@ -122,11 +122,11 @@
 }
 
 .artist-card h3 {
-  font-size: 1rem;
+  font-size: 16px;
   margin-bottom: 5px;
 }
 
 .artist-card p {
-  font-size: 0.9rem;
+  font-size: 14px;
   color: #888;
 }
